--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-select-dropdown": "^3.0.3",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.6.0",
     "react-native-tab-view": "^3.3.0",
