--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
         "@react-navigation/bottom-tabs": "^6.4.1",
         "@react-navigation/native": "^6.0.14",
         "@react-navigation/native-stack": "^6.9.2",
+        "@stripe/stripe-react-native": "^0.22.1",
         "axios": "^1.2.0",
         "deprecated-react-native-prop-types": "^2.3.0",
         "moment": "^2.29.4",
+        "patch-package": "^6.5.0",
         "react": "18.1.0",
         "react-native": "0.70.6",
         "react-native-bootsplash": "^4.3.3",
@@ -29,8 +31,10 @@
         "react-native-inappbrowser-reborn": "^3.7.0",
         "react-native-linear-gradient": "^2.6.2",
         "react-native-paper": "^4.12.5",
+        "react-native-payments-3p": ".\\lib\\react-native-payments-3p\\react-native-payments-3p-0.1.4.tgz",
         "react-native-permissions": "^3.6.1",
         "react-native-pixel-perfect": "^1.0.2",
+        "react-native-razorpay": "^2.3.0",
         "react-native-reanimated": "^2.13.0",
         "react-native-responsive-screen": "^1.4.2",
         "react-native-safe-area-context": "^4.4.1",
@@ -50,6 +54,7 @@
         "@types/jest": "^26.0.23",
         "@types/react": "^18.0.21",
         "@types/react-native": "^0.70.6",
+        "@types/react-native-razorpay": "^2.2.1",
         "@types/react-native-snap-carousel": "^3.8.5",
         "@types/react-test-renderer": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.37.0",
