--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
         "react-navigation": "^4.4.4",
         "react-query": "^3.39.2",
         "socket.io-client": "2.3.0",
-        "ts-react-native-barcode-scanner": ".\\lib\\ts-react-native-barcode-scanner\\ts-react-native-barcode-scanner-0.1.2.tgz",
-        "ts-react-native-payments": ".\\lib\\ts-react-native-payments\\ts-react-native-payments-0.1.5.tgz",
+        "ts-react-native-barcode-scanner": ".\\lib\\ts-react-native-barcode-scanner\\ts-react-native-barcode-scanner-0.1.3.tgz",
+        "ts-react-native-payments": ".\\lib\\ts-react-native-payments\\ts-react-native-payments-0.1.6.tgz",
+        "ts-react-native-sxp": ".\\lib\\ts-react-native-sxp\\ts-react-native-sxp-0.1.1.tgz",
         "vision-camera-code-scanner": "^0.2.0"
     },
     "devDependencies": {
