--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "@react-navigation/bottom-tabs": "^6.4.1",
         "@react-navigation/native": "^6.0.14",
         "@react-navigation/native-stack": "^6.9.2",
-        "@stripe/stripe-react-native": "^0.22.1",
+        "@stripe/stripe-react-native": "^0.23.0",
         "axios": "^1.2.0",
         "deprecated-react-native-prop-types": "^2.3.0",
         "moment": "^2.29.4",
@@ -46,9 +46,9 @@
         "react-navigation": "^4.4.4",
         "react-query": "^3.39.2",
         "socket.io-client": "2.3.0",
-        "ts-react-native-barcode-scanner": ".\\lib\\ts-react-native-barcode-scanner\\ts-react-native-barcode-scanner-0.1.3.tgz",
-        "ts-react-native-payments": ".\\lib\\ts-react-native-payments\\ts-react-native-payments-0.1.6.tgz",
-        "ts-react-native-sxp": ".\\lib\\ts-react-native-sxp\\ts-react-native-sxp-0.1.1.tgz",
+        "ts-react-native-barcode-scanner": "^0.1.4",
+        "ts-react-native-payments": "^0.1.7",
+        "ts-react-native-sxp": "^0.1.2",
         "vision-camera-code-scanner": "^0.2.0"
     },
     "devDependencies": {
